--- a/core/res/res/layout/recent_apps_dialog.xml
+++ b/core/res/res/layout/recent_apps_dialog.xml
@@ -29,7 +29,7 @@
     <!-- Title -->
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="40dip"
+        android:layout_height="20dip"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#80FFFFFF"
@@ -96,10 +96,33 @@
             android:id="@+id/button7" />
 
     </LinearLayout>
+    
+    <LinearLayout
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <include
+            layout="@android:layout/recent_apps_icon"
+            android:id="@+id/button8" />
+
+        <include
+            layout="@android:layout/recent_apps_icon"
+            android:id="@+id/button9" />
+
+        <include
+            layout="@android:layout/recent_apps_icon"
+            android:id="@+id/button10" />
+
+        <include
+            layout="@android:layout/recent_apps_icon"
+            android:id="@+id/button11" />
+
+    </LinearLayout>
 
     <!-- spacer to balance out the title above -->
     <FrameLayout
-        android:layout_height="40dip"
+        android:layout_height="20dip"
         android:layout_width="match_parent"
         />
 </com.android.internal.policy.impl.RecentApplicationsBackground>
