--- a/core/res/res/values/arrays.xml
+++ b/core/res/res/values/arrays.xml
@@ -145,7 +145,7 @@
     <array name="shutdown_reboot_options">
         <item>Reboot</item>
         <item>Recovery</item>
-        <item>Bootloader</item>
+        <item>Download</item>
     </array>
 
     <!-- Do not translate. Defines the shutdown actions passed to the kernel.
@@ -153,7 +153,7 @@
     <string-array name="shutdown_reboot_actions">
         <item></item>
         <item>recovery</item>
-        <item>bootloader</item>
+        <item>download</item>
     </string-array>
 
 
