--- a/core/res/res/layout/keyguard_screen_rotary_unlock_land.xml
+++ b/core/res/res/layout/keyguard_screen_rotary_unlock_land.xml
@@ -173,7 +173,7 @@
 
     <!-- music control buttons -->
     <ImageButton
-        android:id="@+id/mediaPlayButton"
+        android:id="@+id/musicControlPlay"
         android:src="@drawable/ic_media_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -185,7 +185,7 @@
         android:visibility="gone"
         />
     <ImageButton
-        android:id="@+id/mediaPauseButton"
+        android:id="@+id/musicControlPause"
         android:src="@drawable/ic_media_pause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -197,7 +197,7 @@
         android:visibility="gone"
         />
     <ImageButton
-        android:id="@+id/mediaPreviousButton"
+        android:id="@+id/musicControlPrevious"
         android:src="@drawable/ic_media_previous"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -209,7 +209,7 @@
         android:visibility="gone"
         />
     <ImageButton
-        android:id="@+id/mediaNextButton"
+        android:id="@+id/musicControlNext"
         android:src="@drawable/ic_media_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
