--- a/core/res/res/layout/keyguard_screen_rotary_unlock.xml
+++ b/core/res/res/layout/keyguard_screen_rotary_unlock.xml
@@ -198,7 +198,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/mediaPauseButton"
+        android:layout_toLeftOf="@+id/musicControlPause"
         android:layout_marginBottom="20dip"
         android:padding="10px"
         android:background="@color/transparent"
@@ -210,7 +210,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/mediaPauseButton"
+        android:layout_toRightOf="@+id/musicControlPause"
         android:layout_marginBottom="20dip"
         android:padding="10px"
         android:background="@color/transparent"
