--- a/core/res/res/layout/keyguard_screen_rotary_unlock_land.xml
+++ b/core/res/res/layout/keyguard_screen_rotary_unlock_land.xml
@@ -178,8 +178,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="20dip"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dip"
         android:padding="10px"
         android:background="@color/transparent"
         android:visibility="gone"
@@ -190,8 +190,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="20dip"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dip"
         android:padding="10px"
         android:background="@color/transparent"
         android:visibility="gone"
@@ -201,9 +201,9 @@
         android:src="@drawable/ic_media_previous"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_above="@+id/mediaPauseButton"
-        android:layout_marginRight="20dip"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/musicControlPause"
+        android:layout_marginBottom="20dip"
         android:padding="10px"
         android:background="@color/transparent"
         android:visibility="gone"
@@ -213,9 +213,9 @@
         android:src="@drawable/ic_media_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/mediaPauseButton"
-        android:layout_marginRight="20dip"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/musicControlPause"
+        android:layout_marginBottom="20dip"
         android:padding="10px"
         android:background="@color/transparent"
         android:visibility="gone"
